set(P2PCRAWL_UTIL_SRCS P2PCrawlUtil.cpp)
add_library(P2PCrawlUtil SHARED ${P2PCRAWL_UTIL_SRCS})
add_library(P2PCrawlUtil_static STATIC ${P2PCRAWL_UTIL_SRCS})
IF(CMAKE_COMPILER_IS_GNUCXX)
    include_directories("/usr/include/python2.7/")
    find_library(PYTHON_LIB python2.7)
    if(PYTHON_LIB)
        target_link_libraries (P2PCrawlUtil ${PYTHON_LIB})
    endif()
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
SET(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
